k8s-deployment-yaml/apps-deploy.yaml
# --- 1. Payment Service (最底層，被 Login 呼叫) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: payment
          image: ghcr.io/rayyau999/payment-service:${PAYMENT_TAG}
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  selector:
    app: payment
  ports:
    - port: 8081
      targetPort: 8081
---
# --- 2. Login Service ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: login
          image: ghcr.io/rayyau999/login-service:${LOGIN_TAG}
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: login
spec:
  selector:
    app: login
  ports:
    - port: 8080
      targetPort: 8080
---
# --- 3. API Gateway ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: gateway
          image: ghcr.io/rayyau999/eshop-api-gateway:${GATEWAY_TAG}
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - port: 8083
      targetPort: 8083
#      nodePort: 30083 # This is for service type is NodePort
