k8s-deployment-yaml/kafka-setup.yaml
# 第二部分：無頭服務 (Headless Service)
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
---
# 第三部分：有狀態副本集 (StatefulSet)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
spec:
  serviceName: "kafka-svc"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.1.0
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: kafka-storage
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-storage
          persistentVolumeClaim:
            claimName: kafka-data-pvc
