k8s-deployment-yaml/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-web-service
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8083
